# os-sensible-utils

./: Makefile.am  Makefile.in  acinclude.m4  aclocal.m4  configure  configure.ac  select-editor.in  sensible-editor.1
debian/: changelog  control  rules
debian/tests/: control
man/: Makefile.am  Makefile.in  select-editor.man  sensible-browser.man  sensible-editor.man  sensible-pager.man
man/po4a/: cs.add  cs.po  de.add  de.po  es.add  es.po  fr.add  fr.po  it.add  it.po  ja.po  pl.po  po4a.cfg  pt.add  pt.po  sensible-utils.pot
po4a/: Makefile.am  Makefile.in  po4a.conf
po4a/es/: Makefile.in  sensible-editor.1
po4a/fr/: Makefile.in  sensible-editor.1
po4a/pl/: Makefile.in  sensible-editor.1
po4a/po/: debianutils.pot  fr.po  pl.po
test/: echo-as-browser  ed-as-sensible-editor
